[package]
name = "physics_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
libm = "*"
rand = "*"
# sdl2 = { version = "*", features = ["gfx"] }

[dependencies.sdl2]
version = "0.37.0"
default-features = false
features = ["static-link", "use-vcpkg", "gfx"]

[package.metadata.vcpkg]
dependencies = ["sdl2", "sdl2-gfx"]
git = "https://github.com/microsoft/vcpkg"
rev = "501db0f"

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }